# sp500-dataset-ml-pipeline

./: .gitignore  README.md  pyproject.toml  run_pipeline.py
.dvc/: .gitignore
data/processed/: .gitignore  sp500_features.parquet.dvc
docs/: analisis_importancia_limitaciones.md  analisis_resultados_modelo.md  datos_cuantitativos_modelo.md  evaluacion_visualizaciones.md  guia_visualizaciones.md  introduccion_problema_datos.md
