[project]
name = "sp500-dataset-ml-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "kagglehub",
    "pandas",
    "numpy",
    "pyarrow>=24.0.0",
    "matplotlib",
    "scipy",
    "xgboost>=1.7.0",
    "scikit-learn>=1.3.0",
    "shap>=0.43.0",
    "joblib>=1.3.0",
    "seaborn>=0.13.0",
    "yfinance>=1.4.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
]
